--- a/frontend/templates/components/main.hbs
+++ b/frontend/templates/components/main.hbs
@@ -3,7 +3,7 @@
   <h1>Blog</h1>
   <nav id="menu">
     <ul>
-      <li><a href="#posts">{{i18n 'Posts'}}</a></li>
+      <li><a href="#expenses">{{i18n 'Expenses'}}</a></li>
       <li>
         <div id="userbar">Loading...</div>
       </li>
