--- a/frontend/templates/components/expense-edit.hbs
+++ b/frontend/templates/components/expense-edit.hbs
@@ -1,39 +1,37 @@
 <div>
-  {{i18n 'Title'}}:<input type="text" id="title" value="{{selectedExpense.title}}">
+  {{!-- {{i18n 'Title'}}:<input type="text" id="title" value="{{selectedExpense.title}}">
   {{#i18n}}{{errors.title}}{{/i18n}}<br> {{i18n 'Content'}}:
-  <br>
+  <br> --}}
 
   {{!-- Traducir  --}}
 
   <label for="type">{{i18n 'Types'}}:</label>
-  <select name="types" id="type" value="{{selectedExpense.type}}">
+  <select name="types" id="type" value="{{selectedExpense.expense_type}}">
     <option value="combustible">Combustible</option>
     <option value="alimentacion">Alimentacion</option>
     <option value="comunicaciones">Comunicaciones</option>
     <option value="suministros">Suministros</option>
     <option value="ocio">Ocio</option>
   </select>
-  {{#i18n}}{{errors.type}}{{/i18n}}
+  {{#i18n}}{{errors.expense_type}}{{/i18n}}
   <br>
 
   <label for="date">{{i18n 'Date'}}:</label>
-  <input type="date" id="date" name="date" value="{{selectedExpense.date}}">
-  {{#i18n}}{{errors.date}}{{/i18n}}
+  <input type="date" id="date" name="date" value="{{selectedExpense.expense_date}}">
+  {{#i18n}}{{errors.expense_date}}{{/i18n}}
   <br>
 
-  {{i18n 'Quantity'}}:<input type="text" id="quantity" value="{{selectedExpense.quantity}}">
-  {{#i18n}}{{errors.quantity}}{{/i18n}}
+  {{i18n 'Quantity'}}:<input type="text" id="quantity" value="{{selectedExpense.expense_quantity}}">
+  {{#i18n}}{{errors.expense_quantity}}{{/i18n}}
   <br>
 
   <label for="description">{{i18n 'Description'}}:</label>
-  <textarea id="description" rows="20" cols="80">{{selectedExpense.description}}</textarea>
-  {{#i18n}}{{errors.description}}{{/i18n}}
+  <textarea id="description" rows="20" cols="80">{{selectedExpense.expense_description}}</textarea>
+  {{#i18n}}{{errors.expense_description}}{{/i18n}}
   <br>
 
-  <input type="file" id="file" name="filename" value="{{selectedExpense.file}}">
-  <input type="submit">
-  {{#i18n}}{{errors.file}}{{/i18n}}
-
+  <input type="file" id="file" name="filename" value="{{selectedExpense.expense_file}}">
+  {{#i18n}}{{errors.expense_file}}{{/i18n}}
 
   <input type="button" id="savebutton" value="{{i18n 'Save'}}"></input>
 </div>
