--- a/frontend/templates/components/expense-row.hbs
+++ b/frontend/templates/components/expense-row.hbs
@@ -1,14 +1,16 @@
 <tr key="{{id}}">
-  {{!-- No se muy bien si poner {{type}} me sirve para dever la columna, ver bien cuando se pueda ver la pagina--}}
+  {{!-- Hay que ver bien esto de #view-expense?id={{id}--}}
 
-  <td><a href="#view-expense?id={{id}}">{{type}}</a></td>
-  <td>{{owner}} ({{user.currentUser}})</td>
+  <td><a href="#view-expense?id={{id}}">{{expense_type}}</a></td>
+  <td>{{expense_date}}</td>
+  <td>{{expense_quantity}}</td>
+  <td>{{expense_description}}</td>
+  <td>{{expense_file}}</td>
   <td>
-
-    {{#if_eq user.currentUser owner}}
-
+    {{#if_eq currentUser expense_owner}}
       <button class="remove-button" item="{{id}}">{{i18n 'remove'}}</button>
       <button class="edit-button" item="{{id}}">{{i18n 'edit'}}</button>
     {{/if_eq}}
   </td>
 </tr>
+
