fixing more mistakes

--- a/frontend/templates/components/expense-row.hbs
+++ b/frontend/templates/components/expense-row.hbs
@@ -7,7 +7,7 @@
   <td>{{expense_description}}</td>
   <td>{{expense_file}}</td>
   <td>
-    {{#if_eq currentUser expense_owner}}
+    {{#if_eq user.currentUser expense_owner}}
       <button class="remove-button" item="{{id}}">{{i18n 'remove'}}</button>
       <button class="edit-button" item="{{id}}">{{i18n 'edit'}}</button>
     {{/if_eq}}
