--- a/frontend/templates/components/expense-view.hbs
+++ b/frontend/templates/components/expense-view.hbs
@@ -2,6 +2,7 @@
   {{!-- MOdificar para que encaje con las expenses --}}
   {{!-- Necesitamos ver los gastos de esta forma? como si fuera un post con comentarios??? --}}
   <h2>{{selectedExpense.expense_type}}</h2> {{i18n 'by'}} {{selectedExpense.expense_owner}}
+  <div>{{selectedExpense.expense_date}}</div>
   <div>{{selectedExpense.expense_description}}</div>
   <h1>MIRA EXPENSE-VIEW.HBS, Y DECIDE QUE PONER AQUI</h1>
 
