--- a/frontend/templates/components/main.hbs
+++ b/frontend/templates/components/main.hbs
@@ -2,7 +2,7 @@
 <header>
   <h1>Blog</h1>
     {{#if isLogged}}
-  <h1>{{currentUser}}asdasd</h1>
+  <h1>{{user.currentUser}}asdasd</h1>
     {{/if}}
 
 
