trying to add a counter component

--- a/frontend/templates/components/main.hbs
+++ b/frontend/templates/components/main.hbs
@@ -8,6 +8,8 @@
 
   <nav id="menu">
     <ul>
+      <li><a href="#charts">{{i18n 'Charts'}}</a></li>
+
       <li><a href="#expenses">{{i18n 'Expenses'}}</a></li>
       <li>
         <div id="userbar">Loading...</div>
