--- a/frontend/templates/components/login.hbs
+++ b/frontend/templates/components/login.hbs
@@ -8,9 +8,16 @@
   {{#if registerMode}}
     <h2>{{i18n 'New user'}}</h2>
     <div id="registration-form">
+
       {{i18n 'Username'}}: <input type="text" id="registerusername">
-      {{#i18n}}{{registerErrors.username}}{{/i18n}}<br> {{i18n 'Password'}}: <input type="password" id="registerpassword">
+      {{#i18n}}{{registerErrors.username}}{{/i18n}}<br> 
+
+      {{i18n 'Email'}}: <input type="email" id="registeremailname">
+      {{#i18n}}{{registerErrors.email}}{{/i18n}}<br> 
+      
+      {{i18n 'Password'}}: <input type="password" id="registerpassword">
       {{#i18n}}{{registerErrors.passwd}}{{/i18n}}<br>
+
       <input type="submit" id='registerbutton' value="{{i18n 'Create user'}}">
     </div>
   {{/if}}
