--- a/frontend/templates/components/user.hbs
+++ b/frontend/templates/components/user.hbs
@@ -2,6 +2,8 @@
   {{#if isLogged}}
     {{i18n 'Hello'}} {{currentUser}}
     <input type="button" id='logoutbutton' value="{{i18n 'logout'}}"></input>
+    <input type="button" id='deleteuserbutton' value="{{i18n 'Delete User'}}"></input>
+
   {{else}}
     <a href='#login'>{{i18n 'Login'}}</a>
   {{/if}}
