--- a/frontend/templates/components/login.hbs
+++ b/frontend/templates/components/login.hbs
@@ -4,6 +4,8 @@
 {{else}}
   {{#i18n}}{{loginError}}{{/i18n}}<br>
   {{i18n 'Username'}}: <input type="text" id="login"> <br> {{i18n 'Password'}}: <input type="password" id="password"><br>
+  <input type="checkbox" id="rememberCheck" value="yes">{{i18n 'Remember user?'}}<br>
+<label for="rememberCheck"> Accept </label>
   <input type="submit" id='loginbutton' value="{{i18n 'Login'}}"> {{i18n 'New here?'}} <a href="#login" id='registerlink'>{{i18n 'Register Here!'}}</a>
   {{#if registerMode}}
     <h2>{{i18n 'New user'}}</h2>
