--- a/frontend/templates/components/main.hbs
+++ b/frontend/templates/components/main.hbs
@@ -1,22 +1,30 @@
 <div>
+
 <header>
   <h1>Blog</h1>
-    {{#if isLogged}}
-  <h1>{{user.currentUser}}</h1>
-    {{/if}}
-
 
   <nav id="menu">
     <ul>
+
+      <!--<li>
+        <div id="chartsbar">Loading...</div>
+      </li>
+
+      <li>
+        <div id="expensesbar">Loading...</div>
+      </li>-->
+      
+      {{#if user.isLogged}}
       <li><a href="#charts">{{i18n 'Charts'}}</a></li>
 
       <li><a href="#expenses">{{i18n 'Expenses'}}</a></li>
+      {{/if}}
       <li>
         <div id="userbar">Loading...</div>
       </li>
     </ul>
   </nav>
-
+{{user.isLogged}}
 </header>
 
 <!-- router contents -->
