Botón cancel en añadir y editar
En los componentes addexpense y editexpense he añadido un listener para un botón cancelar, que cuando le das te redirige a la pápiga principal.

--- a/frontend/templates/components/expense-edit.hbs
+++ b/frontend/templates/components/expense-edit.hbs
@@ -36,4 +36,5 @@
   {{#i18n}}{{errors.expense_file}}{{/i18n}}
 
   <input type="button" id="savebutton" value="{{i18n 'Save'}}"></input>
+  <input type="button" id="cancelbutton" value="{{i18n 'Cancel'}}"></input>
 </div>
