Validación de expenses
Ahora ya no se valida un expense si la cantidad es 0 o menor

--- a/frontend/templates/components/expense-edit.hbs
+++ b/frontend/templates/components/expense-edit.hbs
@@ -23,7 +23,7 @@
   {{#i18n}}{{errors.expense_date}}{{/i18n}}
   <br>
 
-  {{i18n 'Quantity'}}:<input type="text" id="quantity" value="{{selectedExpense.expense_quantity}}">
+  {{i18n 'Quantity'}}:<input type="number" id="quantity" min="0" value="{{selectedExpense.expense_quantity}}">
   {{#i18n}}{{errors.expense_quantity}}{{/i18n}}
   <br>
 
