--- a/frontend/templates/components/expenses-table.hbs
+++ b/frontend/templates/components/expenses-table.hbs
@@ -9,7 +9,7 @@
       <tr>
         <th>{{i18n 'Type'}}</th>
         <th>{{i18n 'Date'}}</th>
-        <th>{{i18n 'Quatity'}}</th>
+        <th>{{i18n 'Quantity'}}</th>
         <th>{{i18n 'Description'}}</th>
         <th>{{i18n 'File'}}</th>
       </tr>
