--- a/frontend/templates/components/user.hbs
+++ b/frontend/templates/components/user.hbs
@@ -2,7 +2,7 @@
   {{#if isLogged}}
 
     {{i18n 'Hello'}} {{currentUser}}
-    <input type="button" id='logoutbutton' value="{{i18n 'logout'}}"></input>
+    <input type="button" id='logoutbutton' value="{{i18n 'Logout'}}"></input>
     <input type="button" id='deleteuserbutton' value="{{i18n 'Delete User'}}"></input>
 
   {{else}}
