Ordenar la tabla
Ahora al darle al botón Sort se puede ordenar la tabla por fecha de manera ascendente o descendente.

--- a/frontend/templates/components/expense-row.hbs
+++ b/frontend/templates/components/expense-row.hbs
@@ -9,8 +9,8 @@
   <td>
     {{user.currentUser}}: {{expense_owner}}
     {{#if_eq user.currentUser expense_owner}}
-      <button class="remove-button" item="{{id}}">{{i18n 'remove'}}</button>
-      <button class="edit-button" item="{{id}}">{{i18n 'edit'}}</button>
+      <button class="remove-button" item="{{id}}">{{i18n 'Remove'}}</button>
+      <button class="edit-button" item="{{id}}">{{i18n 'Edit'}}</button>
     {{/if_eq}}
   </td>
 </tr>
