--- a/frontend/templates/components/expense-view.hbs
+++ b/frontend/templates/components/expense-view.hbs
@@ -10,4 +10,6 @@
   <h2>Cantidad de expense</h2>
   <div>{{selectedExpense.expense_quantity}}</div>
 
+  <input type="button" id="returnbutton" value="{{i18n 'Return'}}"></input>
+
 </div>
