--- a/frontend/templates/components/user.hbs
+++ b/frontend/templates/components/user.hbs
@@ -4,6 +4,7 @@
     {{i18n 'Hello'}} {{currentUser}}
     <input type="button" id='logoutbutton' value="{{i18n 'Logout'}}"></input>
     <input type="button" id='deleteuserbutton' value="{{i18n 'Delete User'}}"></input>
+    <input type="button" id='edituserbutton' value="{{i18n 'Edit User'}}"></input>
 
   {{else}}
     <a href='#login'>{{i18n 'Login'}}</a>
