--- a/frontend/templates/components/user-edit.hbs
+++ b/frontend/templates/components/user-edit.hbs
@@ -2,13 +2,13 @@
   <h2>{{i18n 'Edit user'}}</h2>
     <div id="registration-form">
 
-      {{i18n 'Username'}}: <input type="text" id="editusername">
+      {{i18n 'Username'}}: <input type="text" id="editusername" value="{{userModel.username}}">
       {{#i18n}}{{registerErrors.username}}{{/i18n}}<br> 
 
-      {{i18n 'Email'}}: <input type="email" id="editemailname">
+      {{i18n 'Email'}}: <input type="email" id="editemailname" value="{{user.email}}">
       {{#i18n}}{{registerErrors.email}}{{/i18n}}<br> 
       
-      {{i18n 'Password'}}: <input type="password" id="editpassword">
+      {{i18n 'Password'}}: <input type="password" id="editpassword" value="{{user.passwd}}">
       {{#i18n}}{{registerErrors.passwd}}{{/i18n}}<br>
 
       <input type="submit" id='savebutton' value="{{i18n 'Edit user'}}">
