--- a/frontend/templates/components/counter.hbs
+++ b/frontend/templates/components/counter.hbs
@@ -1,2 +1,8 @@
-<div id="counter"><span>Current counter: {{counter}}</span><button id="increase">Increase</button><div id="chart"></div></div>
+<div id="counter"><span>Current counter: {{counter}}</span><button id="increase">Increase</button>
+
+<div id="container"></div>
+
+<div id="container2"></div>
+
+</div>
   
