--- a/frontend/templates/components/expense-edit.hbs
+++ b/frontend/templates/components/expense-edit.hbs
@@ -8,11 +8,11 @@
 
   <label for="type">{{i18n 'Types'}}:</label>
   <select name="types" id="type" value="{{selectedExpense.expense_type}}">
-    <option value="Combustible">Combustible</option>
-    <option value="Alimentacion">Alimentacion</option>
-    <option value="Comunicaciones">Comunicaciones</option>
-    <option value="Suministros">Suministros</option>
-    <option value="Ocio">Ocio</option>
+    <option value="combustible">Combustible</option>
+    <option value="alimentacion">Alimentacion</option>
+    <option value="comunicaciones">Comunicaciones</option>
+    <option value="suministros">Suministros</option>
+    <option value="ocio">Ocio</option>
   </select>
   {{#i18n}}{{errors.expense_type}}{{/i18n}}
   <br>
