--- a/frontend/templates/components/expenses-table.hbs
+++ b/frontend/templates/components/expenses-table.hbs
@@ -28,6 +28,8 @@
   {{/if}}
 </div>
 {{#if user.isLogged}}
-  <a href='#add-expense'>{{i18n 'Add expense'}}</a>
+  <button><a href='#add-expense'>{{i18n 'Add expense'}}</a></button>
+  <input type="submit" id='downloadCsv' value="{{i18n 'Download in CSV'}}"></input>
+  <a type="href" id='downloadLink'></a>
 {{/if}}
 </div>
