--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,3 +1,111 @@
+html{
+  position: relative;
+  border: 0;
+  margin: 0;
+  height: 100vh;
+  background-color: bisque;
+}
+
 #menu {
-  background-color: grey;
+  
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+  
+}
+#title {
+  font-size: 20px;
+}
+  
+#options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  border-left: 50px;
+}
+
+#options a, #options button {
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  margin-left: 20px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+#maincontent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#languagecontrol{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  color: white;
+  border-left: 50px;
+}
+#spanishlink{
+  margin-left: 10px;
+  color:white;
+}
+#englishlink{
+  margin-left: 10px;
+  color:white;
+}
+table {
+  border-collapse: collapse; 
+  background-color: white;
+  width: 100%;
+  overflow-x: auto;
+}
+
+th, td {
+  border: 1px solid #ddd; 
+  padding: 8px; 
+  font-size: 18px;
+  font-weight: bold;
+}
+th {
+  text-align: left;
+  background-color: #f2f2f2; 
+}
+td {
+  text-align: center; /* align text in data cells to the center */
+}
+
+
+tr:nth-child(even) td {
+  background-color: #f9f9f9; 
+}
+tr:hover td {
+  background-color: #f5f5f5; /* add a light gray background color to rows when hovered over */
+}
+
+#tableOptions{
+  margin: 15px;
+}
+#menuOptions{
+  margin: 100px;
 }
