--- a/frontend/templates/components/main.hbs
+++ b/frontend/templates/components/main.hbs
@@ -1,16 +1,17 @@
 <div>
 <header>
-  <h1>Blog</h1>
-    {{#if isLogged}}
-  <h1>{{user.currentUser}}asdasd</h1>
-    {{/if}}
+  
 
 
   <nav id="menu">
-    <ul>
+    <h1 id="Tittle">Blog</h1>
+    {{#if isLogged}}
+    <h1>{{user.currentUser}}asdasd</h1>
+    {{/if}}
+    <ul id="options">
       <li><a href="#charts">{{i18n 'Charts'}}</a></li>
 
-      <li><a href="#expenses">{{i18n 'Expenses'}}</a></li>
+      <li><a id="menuOptions" href="#expenses">{{i18n 'Expenses'}}</a></li>
       <li>
         <div id="userbar">Loading...</div>
       </li>
