--- a/frontend/templates/components/counter.hbs
+++ b/frontend/templates/components/counter.hbs
@@ -1,8 +1,16 @@
+
+
+
+
 <div id="counter"><span>Current counter: {{counter}}</span><button id="increase">Increase</button>
 
-<div id="container"></div>
 
-<div id="container2"></div>
+<div id="graficas">
+
+    <div id="container"></div>
+    <div id="container2"></div>
+</div>
 
 </div>
-  
+
+
