--- a/frontend/templates/components/expense-edit.hbs
+++ b/frontend/templates/components/expense-edit.hbs
@@ -35,6 +35,6 @@
   <input type="file" id="file" name="filename" value="">
   {{#i18n}}{{errors.expense_file}}{{/i18n}}
 
-  <input type="button" id="savebutton" value="{{i18n 'Save'}}"></input>
-  <input type="button" id="cancelbutton" value="{{i18n 'Cancel'}}"></input>
+  <button type="button" id="savebutton"><span>{{i18n 'Save'}}</span></button>
+  <button type="button" id="cancelbutton"><span>{{i18n 'Cancel'}}</span></button>
 </div>
