--- a/frontend/css/stylechart.css
+++ b/frontend/css/stylechart.css
@@ -1,28 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;700&display=swap');
 body{
     font-family: 'Inter';
+    background-color: transparent !important;
 }
 
 /* Use custom font in highcharts */
 .highcharts-root {
     font-family: 'Inter';
+    background-color: transparent;
 }
 
 .highcharts-figure,
 .highcharts-data-table table {
     min-width: 360px;
-    max-width: 800px;
-    margin: 1em auto;
+    max-width: 300px;
+    margin: 2em auto;
+    background-color: transparent;
 }
 
 .highcharts-data-table table {
     font-family: 'Inter';
-    /*border-collapse: collapse;*/
-    border: 1px solid #ebebeb;
+    border: 1px solid transparent;
     margin: 10px auto;
     text-align: center;
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
+    background-color: transparent;
 }
 
 .highcharts-data-table caption {
@@ -44,9 +47,9 @@ body{
 
 .highcharts-data-table thead tr,
 .highcharts-data-table tr:nth-child(even) {
-    background: #f8f8f8;
+    background-color: transparent !important;
 }
 
 .highcharts-data-table tr:hover {
-    background: #f1f7ff;
+    background-color: transparent !important;;
 }
