--- a/frontend/templates/components/login.hbs
+++ b/frontend/templates/components/login.hbs
@@ -1,12 +1,13 @@
-<span>
+<div>
 {{#if isLogged}}
   {{i18n 'Your are logged. Logout first'}}
 {{else}}
+  <div id="logindiv">
   {{#i18n}}{{loginError}}{{/i18n}}<br>
   {{i18n 'Username'}}: <input type="text" id="login"> <br> {{i18n 'Password'}}: <input type="password" id="password"><br>
-  <input type="checkbox" id="rememberCheck" value="yes">{{i18n 'Remember user?'}}<br>
-<label for="rememberCheck"> Accept </label>
-  <input type="submit" id='loginbutton' value="{{i18n 'Login'}}"> {{i18n 'New here?'}} <a href="#login" id='registerlink'>{{i18n 'Register Here!'}}</a>
+  <input type="checkbox" id="rememberCheck" value="yes">{{i18n 'Remember user?'}}</input> <br>
+  <label for="rememberCheck"></label>
+  <button type="submit" id='loginbutton' ><span>{{i18n 'Login'}}</span></button> {{i18n 'New here?'}} <a href="#login" id='registerlink'>{{i18n 'Register Here!'}}</a>
   {{#if registerMode}}
     <h2>{{i18n 'New user'}}</h2>
     <div id="registration-form">
@@ -20,9 +21,10 @@
       {{i18n 'Password'}}: <input type="password" id="registerpassword">
       {{#i18n}}{{registerErrors.passwd}}{{/i18n}}<br>
 
-      <input type="submit" id='registerbutton' value="{{i18n 'Create user'}}">
+      <button type="submit" id='registerbutton' ><span>{{i18n 'Create user'}}</span></button>
     </div>
+  </div>
   {{/if}}
 
 {{/if}}
-</span>
+</div>
