graficas casi casi

--- a/frontend/templates/components/counter.hbs
+++ b/frontend/templates/components/counter.hbs
@@ -1,8 +1,39 @@
-<div id="counter"><span>Current counter: {{counter}}</span><button id="increase">Increase</button>
+<div id="counter">
+    <div class="grid-item-date">
+        <label for="fromDate">{{i18n 'From date'}}:</label>
+        <input type="date" id="fromDate" name="fromDate">
 
-<div id="container"></div>
+        <label for="toDate">{{i18n 'To date'}}:</label>
+        <input type="date" id="toDate" name="toDate">
 
-<div id="container2"></div>
+        <button class="botton" id="datebutton">{{i18n 'Apply date'}}</button>
+
+    </div>
+
+    <div>
+        <label for="combustibleCheck"></label>
+        <input type="checkbox" id="combustibleCheck" value="yes">{{i18n 'Fuel'}}<br>
+
+        <label for="alimentacionCheck"></label>
+        <input type="checkbox" id="alimentacionCheck" value="yes">{{i18n 'Food'}}<br>
+
+        <label for="comunicacionesCheck"></label>
+        <input type="checkbox" id="comunicacionesCheck" value="yes">{{i18n 'Communications'}}<br>
+
+        <label for="suministrosCheck"></label>
+        <input type="checkbox" id="suministrosCheck" value="yes">{{i18n 'Supplies'}}<br>
+
+        <label for="ocioCheck"></label>
+        <input type="checkbox" id="ocioCheck" value="yes">{{i18n 'Fun'}}<br>
+        
+        <input type="submit" id='buttontypes' value="{{i18n 'Filter by type of expenses'}}">
+
+    </div>
+
+    <span>Current counter: {{counter}}</span><button id="increase">Increase</button>
+
+    <div id="container"></div>
+
+    <div id="container2"></div>
 
 </div>
-  
