--- a/frontend/templates/components/expense-view.hbs
+++ b/frontend/templates/components/expense-view.hbs
@@ -1,13 +1,13 @@
 <div>
   {{!-- MOdificar para que encaje con las expenses --}}
   {{!-- Necesitamos ver los gastos de esta forma? como si fuera un post con comentarios??? --}}
-  <h2>Tipo de expense</h2>
+  <h2>{{i18n 'Expense Type'}}</h2>
   <div>{{selectedExpense.expense_type}}</div> {{i18n 'by'}} {{selectedExpense.expense_owner}}
-  <h2>Fecha de expense</h2>
+  <h2>{{i18n 'Date'}}</h2>
   <div>{{selectedExpense.expense_date}}</div>
-  <h2>Descripcion de expense</h2>
+  <h2>{{i18n 'Description'}}</h2>
   <div>{{selectedExpense.expense_description}}</div>
-  <h2>Cantidad de expense</h2>
+  <h2>{{i18n 'Quantity'}}</h2>
   <div>{{selectedExpense.expense_quantity}}</div>
 
   <input type="button" id="returnbutton" value="{{i18n 'Return'}}"></input>
