--- a/frontend/templates/components/expenses-table.hbs
+++ b/frontend/templates/components/expenses-table.hbs
@@ -37,7 +37,7 @@
   <div id="optionsDiv">
     {{#if user.isLogged}}
       <button id="tableOptions"><a href='#add-expense'>{{i18n 'Add expense'}}</a></button>
-      <button id="tableOptions" type="submit" id='downloadCsv' ><span>{{i18n 'Download in CSV'}}</span></button>
+      <button  type="button" id='downloadCsv' ><span>{{i18n 'Download in CSV'}}</span></button>
       <a type="href" id='downloadLink'></a>
     {{/if}}
   </div>  
