--- a/frontend/templates/components/expense-edit.hbs
+++ b/frontend/templates/components/expense-edit.hbs
@@ -1,18 +1,11 @@
 <div>
-  {{!-- {{i18n 'Title'}}:<input type="text" id="title" value="{{selectedExpense.title}}">
-  {{#i18n}}{{errors.title}}{{/i18n}}<br> {{i18n 'Content'}}:
-  <br> --}}
-
-  {{!-- Traducir  --}}
-  
-
   <label for="type">{{i18n 'Types'}}:</label>
-    <select name="types" id="type" value="{{selectedExpense.expense_type}}">
-    <option value="combustible">Combustible</option>
-    <option value="alimentacion">Alimentacion</option>
-    <option value="comunicaciones">Comunicaciones</option>
-    <option value="suministros">Suministros</option>
-    <option value="ocio">Ocio</option>
+  <select name="types" id="type" value="{{selectedExpense.expense_type}}">
+    <option value="combustible">{{i18n 'Combustible'}}</option>
+    <option value="alimentacion">{{i18n 'Alimentacion'}}</option>
+    <option value="comunicaciones">{{i18n 'Comunicaciones'}}</option>
+    <option value="suministros">{{i18n 'Suministros'}}</option>
+    <option value="ocio">{{i18n 'Ocio'}}</option>
   </select>
   {{#i18n}}{{errors.expense_type}}{{/i18n}}
   <br>
@@ -31,7 +24,7 @@
   <textarea id="description" rows="20" cols="80">{{selectedExpense.expense_description}}</textarea>
   {{#i18n}}{{errors.expense_description}}{{/i18n}}
   <br>
-  <label for="file">{{i18n 'Archivo'}}:{{selectedExpense.expense_file}}</label>
+  <label for="file">{{i18n 'File'}}:{{selectedExpense.expense_file}}</label>
   <input type="file" id="file" name="filename" value="">
   {{#i18n}}{{errors.expense_file}}{{/i18n}}
 
