--- a/frontend/templates/components/login.hbs
+++ b/frontend/templates/components/login.hbs
@@ -1,30 +1,32 @@
 <div>
-{{#if isLogged}}
+  {{#if isLogged}}
   {{i18n 'Your are logged. Logout first'}}
-{{else}}
+  {{else}}
   <div id="logindiv">
-  {{#i18n}}{{loginError}}{{/i18n}}<br>
-  {{i18n 'Username'}}: <input type="text" id="login"> <br> {{i18n 'Password'}}: <input type="password" id="password"><br>
-  <input type="checkbox" id="rememberCheck" value="yes">{{i18n 'Remember user?'}}</input> <br>
-  <label for="rememberCheck"></label>
-  <button type="submit" id='loginbutton' ><span>{{i18n 'Login'}}</span></button> {{i18n 'New here?'}} <a href="#login" id='registerlink'>{{i18n 'Register Here!'}}</a>
-  {{#if registerMode}}
+    {{#i18n}}{{loginError}}{{/i18n}}<br>
+    {{i18n 'Username'}}: <input type="text" id="login"> <br> {{i18n 'Password'}}: <input type="password"
+      id="password"><br>
+    <input type="checkbox" id="rememberCheck" value="yes">{{i18n 'Remember user?'}}</input> <br>
+    <label for="rememberCheck"></label>
+    <button type="submit" id='loginbutton'><span>{{i18n 'Login'}}</span></button> {{i18n 'New here?'}} <a href="#login"
+      id='registerlink'>{{i18n 'Register Here!'}}</a>
+    {{#if registerMode}}
     <h2>{{i18n 'New user'}}</h2>
     <div id="registration-form">
 
       {{i18n 'Username'}}: <input type="text" id="registerusername">
-      {{#i18n}}{{registerErrors.username}}{{/i18n}}<br> 
+      {{#i18n}}{{registerErrors.username}}{{/i18n}}<br>
 
       {{i18n 'Email'}}: <input type="email" id="registeremailname">
-      {{#i18n}}{{registerErrors.email}}{{/i18n}}<br> 
-      
+      {{#i18n}}{{registerErrors.email}}{{/i18n}}<br>
+
       {{i18n 'Password'}}: <input type="password" id="registerpassword">
       {{#i18n}}{{registerErrors.passwd}}{{/i18n}}<br>
 
-      <button type="submit" id='registerbutton' ><span>{{i18n 'Create user'}}</span></button>
+      <button type="submit" id='registerbutton'><span>{{i18n 'Create user'}}</span></button>
     </div>
   </div>
   {{/if}}
 
-{{/if}}
+  {{/if}}
 </div>
